tests/deny_all_to_from_a_deployment/netpols.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: limit-app1-traffic  # denies all egress and ingress from/to deployment1
spec:
  podSelector:
    matchLabels:
      app: app1
  policyTypes:
  - Egress
  - Ingress
  ingress: []
  egress: []
